Integration with ILC dev env

--- a/registry/Dockerfile
+++ b/registry/Dockerfile
@@ -1,13 +1,16 @@
 FROM node:12-alpine
 
-RUN apk update && apk add --no-cache bash git openssh python make g++ findutils
-
 ADD ./ /codebase
 WORKDIR /codebase
 
 RUN npm install --no-package-lock --no-progress --ignore-scripts
 RUN npm install sqlite3 mysql
 RUN npm run compile
+
+RUN cd ./client && \
+    npm install --no-package-lock --no-progress --ignore-scripts && \
+    npm run build && \
+    cd ..
 
 # Legacy infrastructure support
 RUN npm install -g stdout-mq@^2.2.0
