--- a/registry/package.json
+++ b/registry/package.json
@@ -57,6 +57,7 @@
         "source-map-support": "^0.5.13",
         "sqlite3": "^4.1.0",
         "url-join": "^4.0.1",
+        "serve-static": "^1.14.1",
         "uuid": "^3.4.0"
     }
 }
