--- a/registry/client/package.json
+++ b/registry/client/package.json
@@ -36,11 +36,8 @@
         "@babel/polyfill": "^7.0.0",
         "@material-ui/core": "^4.9.0",
         "@material-ui/icons": "^4.5.1",
-        "ra-data-fakerest": "^3.0.0",
-        "ra-i18n-polyglot": "^3.0.0",
+        "ra-data-simple-rest": "^3.3.2",
         "ra-input-rich-text": "^3.0.0",
-        "ra-language-english": "^3.0.0",
-        "ra-language-french": "^3.0.0",
         "react": "^16.9.0",
         "react-admin": "^3.0.0",
         "react-dom": "^16.9.0"
