--- a/registry/package.json
+++ b/registry/package.json
@@ -14,7 +14,7 @@
         "migrate:make": "knex --knexfile config/knexfile.ts migrate:make",
         "seed": "knex --knexfile config/knexfile.ts seed:run",
         "seed:make": "knex --knexfile config/knexfile.ts seed:make -x ts",
-        "test": "cross-env NODE_ENV=test mocha",
+        "test": "cross-env NODE_ENV=test mocha --exclude=client/node_modules/**",
         "test:ci": "npm run migrate && npm run test",
         "test:coverage": "cross-env NODE_ENV=test nyc mocha",
         "postinstall": "npm run migrate && npm run seed",
