--- a/registry/client/package.json
+++ b/registry/client/package.json
@@ -20,22 +20,27 @@
         "@babel/preset-react": "^7.0.0",
         "@babel/preset-typescript": "^7.1.0",
         "babel-loader": "^8.0.4",
+        "css-loader": "^3.4.2",
+        "file-loader": "^6.0.0",
         "hard-source-webpack-plugin": "^0.11.2",
         "html-loader": "~0.5.5",
         "html-webpack-plugin": "~3.2.0",
         "ignore-not-found-export-plugin": "^1.0.1",
+        "mini-css-extract-plugin": "^0.9.0",
         "serve": "~9.1.0",
         "style-loader": "~0.20.3",
         "wait-on": "^3.2.0",
-        "webpack": "~4.5.0",
+        "webpack": "^4.42.1",
         "webpack-bundle-analyzer": "^3.3.2",
-        "webpack-cli": "~2.0.13",
+        "webpack-cli": "^3.3.11",
         "webpack-dev-server": "~3.1.11"
     },
     "dependencies": {
         "@babel/polyfill": "^7.0.0",
         "@material-ui/core": "^4.9.0",
         "@material-ui/icons": "^4.5.1",
+        "jsoneditor": "^8.6.4",
+        "jsoneditor-react": "^3.0.0",
         "ra-data-simple-rest": "^3.3.2",
         "ra-input-rich-text": "^3.0.0",
         "react": "^16.9.0",
