--- a/registry/client/package.json
+++ b/registry/client/package.json
@@ -38,6 +38,7 @@
         "@babel/polyfill": "^7.0.0",
         "@material-ui/core": "^4.9.0",
         "@material-ui/icons": "^4.5.1",
+        "brace": "^0.11.1",
         "jsoneditor": "^8.6.4",
         "jsoneditor-react": "^3.0.0",
         "ra-data-simple-rest": "^3.3.2",
