--- a/registry/package.json
+++ b/registry/package.json
@@ -23,6 +23,7 @@
     "author": "Vladlen Fedosov",
     "license": "Apache-2.0",
     "devDependencies": {
+        "@types/bcrypt": "^3.0.0",
         "@types/chai": "4.2.7",
         "@types/config": "0.0.34",
         "@types/express": "^4.17.1",
@@ -51,6 +52,7 @@
         "@types/url-join": "^4.0.0",
         "@types/uuid": "^3.4.7",
         "axios": "^0.19.0",
+        "bcrypt": "^4.0.1",
         "body-parser": "^1.19.0",
         "config": "^3.2.3",
         "connect-session-knex": "^1.6.0",
