feat: Authentication for registry (#124)

--- a/registry/package.json
+++ b/registry/package.json
@@ -23,13 +23,18 @@
     "author": "Vladlen Fedosov",
     "license": "Apache-2.0",
     "devDependencies": {
+        "@types/bcrypt": "^3.0.0",
         "@types/chai": "4.2.7",
         "@types/config": "0.0.34",
         "@types/express": "^4.17.1",
+        "@types/express-session": "^1.17.0",
         "@types/hapi__joi": "^16.0.3",
         "@types/lodash": "^4.14.144",
         "@types/mocha": "^7.0.1",
         "@types/nock": "^11.1.0",
+        "@types/passport": "^1.0.3",
+        "@types/passport-http-bearer": "^1.0.35",
+        "@types/passport-local": "^1.0.33",
         "@types/supertest": "2.0.8",
         "chai": "4.2.0",
         "cross-env": "6.0.3",
@@ -47,17 +52,23 @@
         "@types/url-join": "^4.0.0",
         "@types/uuid": "^3.4.7",
         "axios": "^0.19.0",
+        "bcrypt": "^4.0.1",
         "body-parser": "^1.19.0",
         "config": "^3.2.3",
+        "connect-session-knex": "^1.6.0",
         "express": "^4.17.1",
+        "express-session": "^1.17.0",
         "http-shutdown": "^1.2.1",
         "knex": "^0.19.5",
         "lodash": "^4.17.15",
         "newrelic": "^6.2.0",
+        "passport": "^0.4.1",
+        "passport-http-bearer": "^1.0.1",
+        "passport-local": "^1.0.0",
+        "serve-static": "^1.14.1",
         "source-map-support": "^0.5.13",
         "sqlite3": "^4.1.0",
         "url-join": "^4.0.1",
-        "serve-static": "^1.14.1",
         "uuid": "^3.4.0"
     }
 }
