--- a/devFragments/fetchWithCache/package.json
+++ b/devFragments/fetchWithCache/package.json
@@ -4,14 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "echo \"Production start not implemented yet\" && exit 1",
+    "start": "serve -p tcp:0.0.0.0:8238 --no-clipboard --cors build",
     "dev": "webpack-dev-server --config ./webpack.dev.js --port 8238",
+    "build": "webpack --config webpack.config.js --progress --hide-modules",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.0",
+    "serve": "^11.3.0",
     "wrapper-webpack-plugin": "^2.1.0"
   },
   "devDependencies": {
