--- a/devFragments/people/package.json
+++ b/devFragments/people/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "echo \"Production start not implemented yet\" && exit 1",
+    "start": "serve -p tcp:0.0.0.0:8236 --no-clipboard --cors build",
     "dev": "webpack-dev-server --config ./webpack.dev.js --port 8236",
+    "build": "webpack --config webpack.config.js --progress --hide-modules",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -16,6 +17,7 @@
     "query-string": "6.1.0",
     "react-router": "4.3.1",
     "react-router-dom": "4.3.1",
+    "serve": "^11.3.0",
     "single-spa-react": "^2.10.2",
     "wrapper-webpack-plugin": "^2.1.0"
   },
