--- a/devFragments/planets/package.json
+++ b/devFragments/planets/package.json
@@ -4,14 +4,16 @@
   "description": "A microservice about star wars planets",
   "main": "index.js",
   "scripts": {
-    "start": "echo \"Production start not implemented yet\" && exit 1",
+    "start": "serve -p tcp:0.0.0.0:8237 --no-clipboard --cors build",
     "dev": "webpack-dev-server --config ./webpack.dev.js --port 8237",
+    "build": "webpack --config webpack.config.js --progress --hide-modules",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Justin McMurdie",
   "license": "ISC",
   "dependencies": {
     "rxjs": "6.3.3",
+    "serve": "^11.3.0",
     "single-spa-vue": "^1.4.0",
     "vue": "2.5.17",
     "vue-router": "3.0.1",
