--- a/devFragments/system/package.json
+++ b/devFragments/system/package.json
@@ -28,7 +28,6 @@
     "raw-loader": "^3.1.0",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-middleware": "^3.7.0",
-    "webpack-dev-server": "^3.7.2"
+    "webpack-dev-middleware": "^3.7.0"
   }
 }
