--- a/devFragments/navbar/package.json
+++ b/devFragments/navbar/package.json
@@ -5,9 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "concurrently --kill-others --kill-others-on-fail -n client,server \"npm run dev:client\" \"npm run dev:server\"",
-    "dev:client": "webpack-dev-server --config ./webpack.dev.js --port 8235",
-    "dev:server": "nodemon --ignore ./build/ --exec \"webpack --config ./webpack.server.js && node server.js\"",
+    "dev": "NODE_ENV=development nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npm run build:client && npm run build:server",
     "build:client": "webpack --config webpack.config.js --progress --hide-modules",
@@ -18,6 +16,7 @@
   "dependencies": {
     "@reach/router": "1.2.1",
     "cors": "^2.8.5",
+    "express": "^4.17.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-router": "4.3.1",
@@ -37,6 +36,6 @@
     "nodemon": "^1.19.4",
     "webpack": "^4.30.0",
     "webpack-cli": "3.1.0",
-    "webpack-dev-server": "^3.3.1"
+    "webpack-dev-middleware": "^3.7.2"
   }
 }
