--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "install-all": "node install_all.js",
     "start": "node start_all.js",
+    "start:no-apps": "node start_all.js --no-apps",
     "build": "npm run build:ilc && npm run build:registry",
     "build:ilc": "cd ./ilc/ && npm run build",
     "build:registry": "cd ./registry/ && npm run compile",
