--- a/ilc/package.json
+++ b/ilc/package.json
@@ -19,6 +19,7 @@
     "@mapbox/scroll-restorer": "1.0.0",
     "@namecheap/error-extender": "^1.1.1",
     "axios": "^0.19.0",
+    "cidr-matcher": "^2.1.1",
     "config": "^3.2.3",
     "cross-env": "^6.0.3",
     "deepmerge": "4.2.2",
