--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,11 @@ jobs:
       - name: Calc tags
         id: tags
         run: |
+          function isSemver() {
+            echo "${1}" | grep -Eq '^refs/tags/v?([0-9]+)\.([0-9+])\.([0-9]+)(-[a-zA-Z]+(\.[0-9]+)?)?$'
+          }
+
+          echo $GITHUB_REF
           if ! isSemver "${GITHUB_REF}"; then
             echo "Invalid tag name format. Use semver style. Ex: v1.2.3"
             exit 1
@@ -27,10 +32,7 @@ jobs:
 
           echo "Tags that will be used: $DOCKER_TAGS"
           echo ::set-output name=docker_tags::$DOCKER_TAGS
-
-          function isSemver() {
-            echo "${1}" | grep -Eq '^refs/tags/v?([0-9]+)\.([0-9+])\.([0-9]+)(-[a-zA-Z]+(\.[0-9]+)?)?$'
-          }
+          echo ::set-output name=tag::$(echo $GITHUB_REF | cut -d / -f 3)
 
       - name: Pull & tag images for release
         run: |
@@ -50,3 +52,37 @@ jobs:
               docker tag namecheap/ilc_registry:${GITHUB_SHA:0:7} namecheap/ilc_registry:$i
               docker push namecheap/ilc_registry:$i
           done
+
+      - name: Get release description
+        id: get_release
+        uses: octokit/request-action@v2.x
+        with:
+          route: GET /repos/:repository/releases/tags/:tag_name
+          repository: ${{ github.repository }}
+          tag_name: ${{ steps.tags.outputs.tag }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Parse release info
+        id: parse_release
+        uses: gr2m/get-json-paths-action@v1.x
+        with:
+          json: ${{ steps.get_release.outputs.data }}
+          id: "id"
+          body: "body"
+
+      - uses: octokit/request-action@v2.x
+        id: update_check_run
+        with:
+          route: PATCH /repos/:repository/releases/:release_id
+          repository: ${{ github.repository }}
+          release_id: ${{ steps.parse_release.outputs.id }}
+          body: |
+            |
+            ${{ steps.parse_release.outputs.body }}
+
+            **Docker images:**
+            - [namecheap/ilc](https://hub.docker.com/r/namecheap/ilc): `${{ steps.tags.outputs.docker_tags }}`
+            - [namecheap/ilc_registry](https://hub.docker.com/r/namecheap/ilc_registry): `${{ steps.tags.outputs.docker_tags }}`
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
