--- a/ilc/config/custom-environment-variables.json5
+++ b/ilc/config/custom-environment-variables.json5
@@ -16,5 +16,5 @@
     newrelic: {
         licenseKey: 'NR_LICENSE_KEY',
     },
-    trustDomains: 'TRUST_DOMAINS'
+    overrideConfigTrustedOrigins: 'OVERRIDE_CONFIG_TRUSTED_ORIGINS'
 }
