Add CodeceptJS e2e tests

--- a/ilc/package.json
+++ b/ilc/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "cross-env NODE_ENV=test mocha",
     "test:coverage": "cross-env NODE_ENV=test nyc mocha",
+    "test:e2e": "npx codeceptjs run --steps --verbose",
     "start": "node --max-http-header-size 30000 server/app.js",
+    "start:ilc-demo-apps": "docker run --rm -it -p 8235-8240:8235-8240 namecheap/ilc-demo-apps",
     "dev": "npm run build:polyfills && cross-env NODE_ENV=development nodemon --ignore './public/' --max-http-header-size 30000 server/app.js",
     "build": "rimraf public && npm run build:systemjs && npm run build:client && npm run build:polyfills",
     "build:client": "webpack --config build/webpack.js --progress --hide-modules",
@@ -44,12 +46,16 @@
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.9.5",
     "@babel/register": "^7.9.0",
+    "@pollyjs/adapter-puppeteer": "^4.0.4",
+    "@pollyjs/core": "^4.0.4",
     "babel-loader": "^8.1.0",
     "babel-plugin-transform-async-to-promises": "^0.8.15",
     "chai": "^4.2.0",
+    "codeceptjs": "^2.6.1",
     "mocha": "^7.1.1",
     "nodemon": "^2.0.3",
     "nyc": "^15.0.1",
+    "puppeteer": "^3.0.0",
     "raw-loader": "^3.1.0",
     "sinon": "^8.1.1",
     "webpack": "^4.42.1",
