--- a/ilc/package.json
+++ b/ilc/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "cross-env NODE_ENV=test mocha",
     "test:coverage": "cross-env NODE_ENV=test nyc mocha",
-    "test:e2e": "codeceptjs run --steps --verbose",
+    "test:e2e": "codeceptjs run --verbose",
     "start": "node --max-http-header-size 30000 server/app.js",
     "dev": "npm run build:polyfills && cross-env NODE_ENV=development nodemon --ignore './public/' --max-http-header-size 30000 server/app.js",
     "build": "rimraf public && npm run build:systemjs && npm run build:client && npm run build:polyfills",
@@ -57,6 +57,8 @@
     "puppeteer": "^3.0.0",
     "raw-loader": "^3.1.0",
     "sinon": "^8.1.1",
+    "ts-node": "^8.9.0",
+    "typescript": "^3.8.3",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-middleware": "^3.7.2",
