--- a/ilc/package.json
+++ b/ilc/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "cross-env NODE_ENV=test mocha",
     "test:coverage": "cross-env NODE_ENV=test nyc mocha",
-    "test:e2e": "codeceptjs run --verbose",
+    "test:e2e": "cross-env NODE_ENV=test codeceptjs run --verbose",
     "start": "node --max-http-header-size 30000 server/app.js",
     "dev": "npm run build:polyfills && cross-env NODE_ENV=development nodemon --ignore './public/' --max-http-header-size 30000 server/app.js",
     "build": "rimraf public && npm run build:systemjs && npm run build:client && npm run build:polyfills",
@@ -59,6 +59,7 @@
     "sinon": "^8.1.1",
     "ts-node": "^8.9.0",
     "typescript": "^3.8.3",
+    "wait-on": "^4.0.2",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-middleware": "^3.7.2",
