Mock server, forward SIGKILL

--- a/ilc/package.json
+++ b/ilc/package.json
@@ -7,6 +7,7 @@
     "test": "cross-env NODE_ENV=test mocha",
     "test:coverage": "cross-env NODE_ENV=test nyc mocha",
     "test:e2e": "cross-env NODE_ENV=test codeceptjs run --verbose",
+    "test:e2e:def": "cross-env NODE_ENV=test codeceptjs def --output ./spec/typings",
     "start": "node --max-http-header-size 30000 server/app.js",
     "dev": "npm run build:polyfills && cross-env NODE_ENV=development nodemon --ignore './public/' --max-http-header-size 30000 server/app.js",
     "build": "rimraf public && npm run build:systemjs && npm run build:client && npm run build:polyfills",
@@ -45,6 +46,7 @@
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.9.5",
     "@babel/register": "^7.9.0",
+    "@codeceptjs/mock-request": "^0.3.0",
     "@pollyjs/adapter-puppeteer": "^4.0.4",
     "@pollyjs/core": "^4.0.4",
     "babel-loader": "^8.1.0",
