chore: better typings for E2E tests

--- a/ilc/tsconfig.json
+++ b/ilc/tsconfig.json
@@ -9,7 +9,8 @@
     ],
     "types": [
       "node",
-      "./spec/typings/steps"
+      "./spec/typings/steps",
+      "./spec/typings/mock-request"
     ],
     "esModuleInterop": true
   }
