--- a/ilc/package.json
+++ b/ilc/package.json
@@ -53,6 +53,7 @@
     "babel-plugin-transform-async-to-promises": "^0.8.15",
     "chai": "^4.2.0",
     "codeceptjs": "^2.6.1",
+    "execa": "^4.0.0",
     "mocha": "^7.1.1",
     "nodemon": "^2.0.3",
     "nyc": "^15.0.1",
