Added NPM command to run e2e tests at CI

--- a/ilc/package.json
+++ b/ilc/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "test": "cross-env NODE_ENV=test mocha",
     "test:coverage": "cross-env NODE_ENV=test nyc mocha",
-    "test:e2e": "cross-env NODE_ENV=test codeceptjs run --verbose",
+    "test:e2e": "cross-env TEST_ENV=verbose npm run test:e2e:ci -- --verbose",
     "test:e2e:generate-typings": "codeceptjs def -o ./spec/typings",
+    "test:e2e:ci": "cross-env NODE_ENV=test codeceptjs run",
     "start": "node --max-http-header-size 30000 server/app.js",
     "dev": "npm run build:polyfills && cross-env NODE_ENV=development nodemon --ignore './public/' --max-http-header-size 30000 server/app.js",
     "build": "rimraf public && npm run build:systemjs && npm run build:client && npm run build:polyfills",
