Moved e2e tests to separate folder in order to not to install it's dependencies for ILC

--- a/e2e/tsconfig.json
+++ b/e2e/tsconfig.json
@@ -9,8 +9,8 @@
     ],
     "types": [
       "node",
-      "./spec/typings/steps",
-      "./spec/typings/mock-request"
+      "./typings/steps",
+      "./typings/mock-request"
     ],
     "esModuleInterop": true
   }
