--- a/registry/Dockerfile
+++ b/registry/Dockerfile
@@ -2,20 +2,18 @@ FROM node:12-alpine
 
 RUN apk --no-cache add --virtual builds-deps build-base python
 
+# Legacy infrastructure support
+RUN npm install -g stdout-mq@^2.4.0
+
 ADD ./ /codebase
 WORKDIR /codebase
 
 RUN npm install --no-package-lock --no-progress --ignore-scripts
 RUN npm rebuild bcrypt --build-from-source
 RUN npm install sqlite3 mysql
-RUN npm run compile
 
-RUN cd ./client && \
-    npm install --no-progress --ignore-scripts && \
-    npm run build && \
-    cd ..
+RUN cd ./client && npm install --no-progress --ignore-scripts
 
-# Legacy infrastructure support
-RUN npm install -g stdout-mq@^2.4.0
+RUN npm run build
 
 CMD ["npm", "run", "start-docker"]
