--- a/ilc/package.json
+++ b/ilc/package.json
@@ -11,7 +11,7 @@
     "build": "rimraf public && npm run build:systemjs && npm run build:client && npm run build:polyfills",
     "build:client": "webpack --config build/webpack.js --progress --hide-modules",
     "build:systemjs": "node ./systemjs/build.js",
-    "build:polyfills": "wget -O ./public/polyfill.min.js https://polyfill.io/v3/polyfill.min.js?features=URL%2CObject.entries%2CDocumentFragment.prototype.append%2CElement.prototype.append%2CElement.prototype.remove%2CObject.assign%2CElement.prototype.closest%2CCustomEvent"
+    "build:polyfills": "mkdir -p ./public && wget -O ./public/polyfill.min.js https://polyfill.io/v3/polyfill.min.js?features=URL%2CObject.entries%2CDocumentFragment.prototype.append%2CElement.prototype.append%2CElement.prototype.remove%2CObject.assign%2CElement.prototype.closest%2CCustomEvent"
   },
   "author": "Vladlen Fedosov",
   "license": "Apache-2.0",
