Remove auto-watch flag

--- a/ilc/package.json
+++ b/ilc/package.json
@@ -7,8 +7,8 @@
     "test": "cross-env NODE_ENV=test mocha",
     "test:watch": "cross-env NODE_ENV=test mocha --watch",
     "test:coverage": "cross-env NODE_ENV=test nyc mocha",
-    "test:client": "cross-env NODE_ENV=test karma start --single-run --no-auto-watch karma.config.js",
-    "test:client:watch": "cross-env NODE_ENV=test karma start --no-single-run --auto-watch karma.config.js",
+    "test:client": "cross-env NODE_ENV=test karma start --single-run karma.config.js",
+    "test:client:watch": "cross-env NODE_ENV=test karma start --no-single-run karma.config.js",
     "start": "node --max-http-header-size 30000 server/app.js",
     "dev": "npm run build:polyfills && cross-env NODE_ENV=development nodemon --ignore './public/' --max-http-header-size 30000 server/app.js",
     "build": "rimraf public && npm run build:systemjs && npm run build:client && npm run build:polyfills",
