Set 0 at thresholds, rename karma.config to karma.conf, exlude client directory from mocha tests

--- a/ilc/.mocharc.json
+++ b/ilc/.mocharc.json
@@ -1,5 +1,8 @@
 {
-    "spec": "**/*.spec.js",
+    "spec": [
+        "server/**/*.spec.js",
+        "common/**/*.spec.js"
+    ],
     "require": "@babel/register",
     "timeout": 5000,
     "exclude": "node_modules/**/*"
