--- a/ilc/Dockerfile
+++ b/ilc/Dockerfile
@@ -1,19 +1,16 @@
-FROM node:12-alpine AS build
+FROM node:12-alpine AS build-stage
 
-RUN apk update && apk add --no-cache bash git openssh python make g++ findutils chromium chromium-chromedriver
-
-ENV CHROME_BIN=/usr/bin/chromium-browser
-ENV CHROME_DRIVER=/usr/bin/chromedriver
+RUN apk update && apk add --no-cache bash git openssh python make g++ findutils
 
 COPY ./ /temporary
 WORKDIR /temporary
 
 RUN npm install --no-package-lock --no-progress
-RUN npm run test
-RUN npm run test:client -- --browsers ChromeHeadlessWithoutSecurity
 RUN npm run build
 
-FROM node:12-alpine AS release
+FROM node:12-alpine AS release-stage
+
+ENV NODE_ENV=production
 
 # Legacy infrastructure support
 RUN npm install -g stdout-mq@^2.4.0
@@ -26,8 +23,7 @@ COPY ./server ./server
 COPY ./common ./common
 COPY ./config ./config
 
-COPY --from=build /temporary/public ./public
-
-RUN npm install --no-package-lock --no-progress --production
+COPY --from=build-stage /temporary/public ./public
+COPY --from=build-stage /temporary/node_modules ./node_modules
 
 CMD ["npm", "start"]
