Cover handle page transaction with tests

--- a/ilc/package.json
+++ b/ilc/package.json
@@ -8,7 +8,7 @@
     "test:watch": "npm run test -- --watch",
     "test:coverage": "cross-env NODE_ENV=test nyc mocha",
     "test:client": "npm run build:systemjs && cross-env NODE_ENV=test karma start",
-    "test:client:watch": "npm run test:client -- --no-single-run",
+    "test:client:watch": "npm run test:client -- --single-run=false --auto-watch=true",
     "start": "node --max-http-header-size 30000 server/app.js",
     "dev": "npm run build:polyfills && cross-env NODE_ENV=development nodemon --ignore './public/' --max-http-header-size 30000 server/app.js",
     "build": "rimraf public && npm run build:systemjs && npm run build:client && npm run build:polyfills",
@@ -59,6 +59,7 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^4.0.2",
     "mocha": "^7.1.1",
+    "nanohtml": "^1.9.1",
     "nodemon": "^2.0.3",
     "nyc": "^15.0.1",
     "raw-loader": "^3.1.0",
