feat: Added ability to wrap NewRelic client side JS with custom wrapper

--- a/ilc/config/custom-environment-variables.json5
+++ b/ilc/config/custom-environment-variables.json5
@@ -15,6 +15,7 @@
     },
     newrelic: {
         licenseKey: 'NR_LICENSE_KEY',
+        customClientJsWrapper: 'NR_CUSTOM_CLIENT_JS_WRAPPER',
     },
     overrideConfigTrustedOrigins: 'OVERRIDE_CONFIG_TRUSTED_ORIGINS'
 }
