--- a/ilc/config/default.json5
+++ b/ilc/config/default.json5
@@ -14,6 +14,10 @@
     },
     newrelic: {
         licenseKey: null,
+        /**
+         * Usage example: <script type="text/javascript">function myjs(){ %CONTENT% }; myjs();</script>
+         */
+        customClientJsWrapper: null,
     },
     overrideConfigTrustedOrigins: null
 }
