--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,7 +76,7 @@ jobs:
           docker push namecheap/ilc_tmp:reg_${GITHUB_SHA:0:7}
 
   e2e_tests:
-    name: Run E2E test
+    name: Run E2E tests
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
