--- a/ilc/package.json
+++ b/ilc/package.json
@@ -62,6 +62,7 @@
     "nanohtml": "^1.9.1",
     "nodemon": "^2.0.3",
     "nyc": "^15.0.1",
+    "proxyquire": "^2.1.3",
     "raw-loader": "^3.1.0",
     "sinon": "^8.1.1",
     "webpack": "^4.42.1",
