--- a/ilc/package.json
+++ b/ilc/package.json
@@ -2,15 +2,15 @@
   "name": "ilc",
   "version": "1.0.0",
   "description": "",
-  "main": "server/app.js",
+  "main": "server/index.js",
   "scripts": {
     "test": "cross-env NODE_ENV=test mocha",
     "test:watch": "npm run test -- --watch",
     "test:coverage": "cross-env NODE_ENV=test nyc mocha",
     "test:client": "npm run build:systemjs && cross-env NODE_ENV=test karma start",
     "test:client:watch": "npm run test:client -- --single-run=false --auto-watch=true",
-    "start": "node --max-http-header-size 30000 server/app.js",
-    "dev": "npm run build:polyfills && cross-env NODE_ENV=development nodemon --ignore './public/' --max-http-header-size 30000 server/app.js",
+    "start": "node --max-http-header-size 30000 server/index.js",
+    "dev": "npm run build:polyfills && cross-env NODE_ENV=development nodemon --ignore './public/' --max-http-header-size 30000 server/index.js",
     "build": "rimraf public && npm run build:systemjs && npm run build:client && npm run build:polyfills",
     "build:client": "webpack --config build/webpack.js --progress --hide-modules",
     "build:systemjs": "node ./systemjs/build.js",
