--- a/ilc/package.json
+++ b/ilc/package.json
@@ -61,10 +61,12 @@
     "karma-webpack": "^4.0.2",
     "mocha": "^7.1.1",
     "nanohtml": "^1.9.1",
+    "nock": "^12.0.3",
     "nodemon": "^2.0.3",
     "nyc": "^15.0.1",
     "raw-loader": "^3.1.0",
     "sinon": "^8.1.1",
+    "supertest": "^4.0.2",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-middleware": "^3.7.2",
