--- a/registry/client/package.json
+++ b/registry/client/package.json
@@ -37,6 +37,7 @@
         "@material-ui/core": "^4.9.0",
         "@material-ui/icons": "^4.5.1",
         "brace": "^0.11.1",
+        "js-cookie": "^2.2.1",
         "jsoneditor": "^8.6.4",
         "jsoneditor-react": "^3.0.0",
         "ra-data-simple-rest": "^3.3.2",
