--- a/registry/package.json
+++ b/registry/package.json
@@ -63,6 +63,7 @@
         "knex": "^0.21.1",
         "lodash": "^4.17.15",
         "newrelic": "^6.9.0",
+        "openid-client": "^3.15.9",
         "passport": "^0.4.1",
         "passport-http-bearer": "^1.0.1",
         "passport-local": "^1.0.0",
