--- a/registry/package.json
+++ b/registry/package.json
@@ -36,6 +36,7 @@
         "@types/passport": "^1.0.3",
         "@types/passport-http-bearer": "^1.0.35",
         "@types/passport-local": "^1.0.33",
+        "@types/sinon": "^9.0.4",
         "@types/supertest": "2.0.8",
         "chai": "4.2.0",
         "cross-env": "6.0.3",
@@ -43,6 +44,7 @@
         "nock": "^11.7.2",
         "nodemon": "^2.0.4",
         "nyc": "^15.1.0",
+        "sinon": "^9.0.2",
         "supertest": "4.0.2",
         "ts-node": "^8.10.2",
         "typescript": "3.7.5"
