--- a/registry/package.json
+++ b/registry/package.json
@@ -38,6 +38,9 @@
         "@types/passport-local": "^1.0.33",
         "@types/sinon": "^9.0.4",
         "@types/supertest": "2.0.8",
+        "@types/newrelic": "^6.2.0",
+        "@types/url-join": "^4.0.0",
+        "@types/uuid": "^3.4.9",
         "chai": "4.2.0",
         "cross-env": "6.0.3",
         "mocha": "^7.2.0",
@@ -47,13 +50,11 @@
         "sinon": "^9.0.2",
         "supertest": "4.0.2",
         "ts-node": "^8.10.2",
+        "timekeeper": "^2.2.0",
         "typescript": "3.7.5"
     },
     "dependencies": {
         "@hapi/joi": "^16.1.7",
-        "@types/newrelic": "^6.2.0",
-        "@types/url-join": "^4.0.0",
-        "@types/uuid": "^3.4.9",
         "axios": "^0.19.0",
         "bcrypt": "^4.0.1",
         "body-parser": "^1.19.0",
