--- a/ilc/package.json
+++ b/ilc/package.json
@@ -31,6 +31,7 @@
     "is-url": "^1.2.4",
     "lodash": "^4.17.19",
     "newrelic": "^6.11.0",
+    "pino": "^6.5.0",
     "serve-static": "^1.14.1",
     "single-spa": "5.4.0",
     "systemjs": "^6.4.2",
