--- a/ilc/package.json
+++ b/ilc/package.json
@@ -26,6 +26,7 @@
     "config": "^3.3.1",
     "cross-env": "^6.0.3",
     "deepmerge": "4.2.2",
+    "fast-glob": "^3.2.4",
     "fastify": "^2.15.2",
     "http-headers": "^3.0.2",
     "hyperid": "^2.0.5",
