--- a/ilc/package.json
+++ b/ilc/package.json
@@ -26,11 +26,14 @@
     "config": "^3.3.1",
     "cross-env": "^6.0.3",
     "deepmerge": "4.2.2",
+    "fast-glob": "^3.2.4",
     "fastify": "^2.15.2",
     "http-headers": "^3.0.2",
+    "hyperid": "^2.0.5",
     "is-url": "^1.2.4",
     "lodash": "^4.17.19",
     "newrelic": "^6.11.0",
+    "pino": "^6.5.0",
     "serve-static": "^1.14.1",
     "single-spa": "5.4.0",
     "systemjs": "^6.4.2",
@@ -66,6 +69,7 @@
     "raw-loader": "^3.1.0",
     "sinon": "^8.1.1",
     "supertest": "^4.0.2",
+    "test-console": "^1.1.0",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-middleware": "^3.7.2",
