--- a/ilc/package.json
+++ b/ilc/package.json
@@ -24,6 +24,7 @@
     "axios": "^0.19.2",
     "cidr-matcher": "^2.1.1",
     "config": "^3.3.1",
+    "cookie": "^0.4.1",
     "cross-env": "^6.0.3",
     "deepmerge": "4.2.2",
     "fast-glob": "^3.2.4",
