--- a/ilc/config/default.json5
+++ b/ilc/config/default.json5
@@ -12,5 +12,6 @@
          */
         customClientJsWrapper: null,
     },
-    overrideConfigTrustedOrigins: null
+    overrideConfigTrustedOrigins: null,
+    amdDefineCompatibilityMode: false, //TODO: should be moved to registry, see also docs/umd_bundles_compatibility.md
 }
