--- a/registry/package.json
+++ b/registry/package.json
@@ -29,16 +29,16 @@
         "@types/config": "0.0.34",
         "@types/express": "^4.17.6",
         "@types/express-session": "^1.17.0",
-        "@types/hapi__joi": "^16.0.3",
+        "@types/joi": "^14.3.4",
         "@types/lodash": "^4.14.155",
         "@types/mocha": "^7.0.1",
+        "@types/newrelic": "^6.2.0",
         "@types/nock": "^11.1.0",
         "@types/passport": "^1.0.3",
         "@types/passport-http-bearer": "^1.0.35",
         "@types/passport-local": "^1.0.33",
         "@types/sinon": "^9.0.4",
         "@types/supertest": "2.0.8",
-        "@types/newrelic": "^6.2.0",
         "@types/url-join": "^4.0.0",
         "@types/uuid": "^3.4.9",
         "chai": "4.2.0",
@@ -49,12 +49,11 @@
         "nyc": "^15.1.0",
         "sinon": "^9.0.2",
         "supertest": "4.0.2",
-        "ts-node": "^8.10.2",
         "timekeeper": "^2.2.0",
+        "ts-node": "^8.10.2",
         "typescript": "3.7.5"
     },
     "dependencies": {
-        "@hapi/joi": "^16.1.7",
         "axios": "^0.19.0",
         "bcrypt": "^5.0.0",
         "body-parser": "^1.19.0",
@@ -63,6 +62,7 @@
         "express": "^4.17.1",
         "express-session": "^1.17.1",
         "http-shutdown": "^1.2.1",
+        "joi": "^17.2.1",
         "knex": "^0.21.1",
         "lodash": "^4.17.19",
         "newrelic": "^6.9.0",
