--- a/ilc/package.json
+++ b/ilc/package.json
@@ -14,7 +14,7 @@
     "build": "rimraf public && npm run build:systemjs && npm run build:client && npm run build:polyfills",
     "build:client": "webpack --config build/webpack.js --progress --hide-modules",
     "build:systemjs": "node ./systemjs/build.js",
-    "build:polyfills": "mkdir -p ./public && wget -O ./public/polyfill.min.js https://polyfill.io/v3/polyfill.min.js?features=URL%2CObject.entries%2CDocumentFragment.prototype.append%2CElement.prototype.append%2CElement.prototype.remove%2CObject.assign%2CElement.prototype.closest%2CCustomEvent"
+    "build:polyfills": "mkdir -p ./public && nwget https://polyfill.io/v3/polyfill.min.js?features=URL%2CObject.entries%2CDocumentFragment.prototype.append%2CElement.prototype.append%2CElement.prototype.remove%2CObject.assign%2CElement.prototype.closest%2CCustomEvent -O ./public/polyfill.min.js"
   },
   "author": "Vladlen Fedosov",
   "license": "Apache-2.0",
@@ -40,7 +40,8 @@
     "systemjs-css-extra": "^1.0.2",
     "tailorx": "^6.0.0",
     "url-join": "^4.0.1",
-    "uuid": "^3.4.0"
+    "uuid": "^3.4.0",
+    "wget-improved": "^3.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.11.1",
