--- a/ilc/config/default.json5
+++ b/ilc/config/default.json5
@@ -14,4 +14,15 @@
     },
     overrideConfigTrustedOrigins: null,
     amdDefineCompatibilityMode: false, //TODO: should be moved to registry, see also docs/umd_bundles_compatibility.md
+    i18n: { //TODO: should be moved to registry
+        enabled: true,
+        default: {
+            locale: 'en-US',
+            currency: 'USD'
+        },
+        supported: {
+            locale: ['en-US', 'en-GB', 'fr-FR', 'fr-CA', 'de-DE'],
+            currency: ['USD', 'EUR', 'GBP']
+        },
+    }
 }
