--- a/registry/package.json
+++ b/registry/package.json
@@ -51,7 +51,7 @@
         "supertest": "4.0.2",
         "timekeeper": "^2.2.0",
         "ts-node": "^8.10.2",
-        "typescript": "3.7.5"
+        "typescript": "^3.9.7"
     },
     "dependencies": {
         "axios": "^0.19.0",
