--- a/registry/package.json
+++ b/registry/package.json
@@ -54,6 +54,7 @@
         "typescript": "^3.9.7"
     },
     "dependencies": {
+        "@namecheap/error-extender": "^1.1.1",
         "axios": "^0.19.0",
         "bcrypt": "^5.0.0",
         "body-parser": "^1.19.0",
