--- a/registry/client/package.json
+++ b/registry/client/package.json
@@ -44,6 +44,7 @@
         "ra-data-simple-rest": "^3.9.3",
         "react": "^16.9.0",
         "react-admin": "^3.9.5",
+        "react-diff-viewer": "^3.1.1",
         "react-dom": "^16.9.0"
     }
 }
