--- a/registry/package.json
+++ b/registry/package.json
@@ -51,9 +51,10 @@
         "supertest": "4.0.2",
         "timekeeper": "^2.2.0",
         "ts-node": "^8.10.2",
-        "typescript": "3.7.5"
+        "typescript": "^3.9.7"
     },
     "dependencies": {
+        "@namecheap/error-extender": "^1.2.0",
         "axios": "^0.19.0",
         "bcrypt": "^5.0.0",
         "body-parser": "^1.19.0",
