--- a/ilc/package.json
+++ b/ilc/package.json
@@ -24,13 +24,16 @@
     "axios": "^0.19.2",
     "cidr-matcher": "^2.1.1",
     "config": "^3.3.1",
+    "cookie": "^0.4.1",
     "cross-env": "^6.0.3",
     "deepmerge": "4.2.2",
     "fast-glob": "^3.2.4",
     "fastify": "^2.15.2",
     "http-headers": "^3.0.2",
     "hyperid": "^2.0.5",
+    "ilc-sdk": "^2.0.0-alpha.13",
     "is-url": "^1.2.4",
+    "js-cookie": "^2.2.1",
     "lodash": "^4.17.19",
     "newrelic": "^6.11.0",
     "pino": "^6.5.0",
