--- a/registry/package.json
+++ b/registry/package.json
@@ -16,7 +16,7 @@
         "seed": "knex --knexfile config/knexfile.ts seed:run",
         "seed:make": "knex --knexfile config/knexfile.ts seed:make -x ts",
         "test": "cross-env NODE_ENV=test mocha --exclude=client/node_modules/**",
-        "test:ci": "npm run migrate && npm run test",
+        "test:ci": "npm run migrate && npm run test -- --forbid-only",
         "test:coverage": "cross-env NODE_ENV=test nyc mocha",
         "postinstall": "npm run migrate && npm run seed",
         "assetsdiscovery": "cross-env NODE_ENV=production INTERVAL=2000 node ./build/server/runnerAppAssetsDiscovery.js"
