--- a/ilc/package.json
+++ b/ilc/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@mapbox/scroll-restorer": "1.0.0",
     "@namecheap/error-extender": "^1.1.1",
+    "agentkeepalive": "^4.1.3",
     "axios": "^0.21.1",
     "cidr-matcher": "^2.1.1",
     "config": "^3.3.1",
@@ -42,7 +43,7 @@
     "single-spa": "5.6.0",
     "systemjs": "^6.4.2",
     "systemjs-css-extra": "^1.0.2",
-    "tailorx": "^6.1.0",
+    "tailorx": "^6.1.1",
     "url-join": "^4.0.1",
     "uuid": "^3.4.0"
   },
