--- a/registry/package.json
+++ b/registry/package.json
@@ -27,7 +27,8 @@
         "@types/bcrypt": "^3.0.0",
         "@types/chai": "4.2.7",
         "@types/config": "0.0.34",
-        "@types/express": "^4.17.6",
+        "@types/express": "4.17.9",
+        "@types/express-serve-static-core": "4.17.17",
         "@types/express-session": "^1.17.0",
         "@types/joi": "^14.3.4",
         "@types/lodash": "^4.14.155",
