feat: use guard manager
refactor: use common unlocalizeUrl function

feat: create guard for server

feat: create guard for client side

feat: build patch events

feat: use navigation hook and init everything in client js

feat: use common PluginManager on both client and server sides

feat: provide an ability to add  many navigation hooks

fix: update PluginManager mock

feat: cover guard manager with tests

feat: run every hook and return result then

fix: update a var name

feat: export remove navigation hook function

feat: cover setup events with tests

fix: system limit for number of file watchers reached

chore: rename test suites

feat: cover plugin manager with tests

feat: cover guard manager with tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,10 @@ jobs:
         DOCKER_BUILDKIT=1 docker build . --file ./Test.Dockerfile --tag ilc:tmp-test-client --build-arg BASE_IMAGE=ilc:tmp
 
     - name: Run client side tests
-      run: docker run --volume /artifacts/ilc/.test_output/client:/temporary ilc:tmp-test-client bash -c "npm run test:client -- --browsers ChromeHeadlessWithoutSecurity && mv .karma_output/* /temporary"
+      run: |
+        echo fs.inotify.max_user_watches=524288 | sudo tee -a /etc/sysctl.conf
+        sudo sysctl -p
+        docker run --volume /artifacts/ilc/.test_output/client:/temporary ilc:tmp-test-client bash -c "npm run test:client -- --browsers ChromeHeadlessWithoutSecurity && mv .karma_output/* /temporary"
 
     - uses: actions/upload-artifact@v2
       with:
