--- a/ilc/package.json
+++ b/ilc/package.json
@@ -15,7 +15,8 @@
     "build": "rimraf public && npm run build:systemjs && npm run build:client && npm run build:polyfills",
     "build:client": "webpack --config build/webpack.js --progress --hide-modules",
     "build:systemjs": "node ./systemjs/build.js",
-    "build:polyfills": "mkdir -p ./public && nwget https://polyfill.io/v3/polyfill.min.js?features=URL%2CObject.entries%2CDocumentFragment.prototype.append%2CElement.prototype.append%2CElement.prototype.remove%2CObject.assign%2CElement.prototype.closest%2CCustomEvent%2CObject.values%2CArray.from -O ./public/polyfill.min.js"
+    "build:polyfills": "mkdir -p ./public && nwget https://polyfill.io/v3/polyfill.min.js?features=URL%2CObject.entries%2CDocumentFragment.prototype.append%2CElement.prototype.append%2CElement.prototype.remove%2CObject.assign%2CElement.prototype.closest%2CCustomEvent%2CObject.values%2CArray.from -O ./public/polyfill.min.js",
+    "postinstall": "npm run build"
   },
   "author": "Vladlen Fedosov",
   "license": "Apache-2.0",
@@ -57,6 +58,7 @@
     "babel-loader": "^8.1.0",
     "babel-plugin-transform-async-to-promises": "^0.8.15",
     "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "karma": "^5.1.1",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^3.1.0",
@@ -68,7 +70,7 @@
     "karma-webpack": "^4.0.2",
     "mocha": "^7.2.0",
     "nanohtml": "^1.9.1",
-    "nock": "^12.0.3",
+    "nock": "^13.0.7",
     "nodemon": "^2.0.4",
     "nyc": "^15.1.0",
     "raw-loader": "^3.1.0",
