--- a/ilc/package.json
+++ b/ilc/package.json
@@ -31,6 +31,7 @@
     "deepmerge": "4.2.2",
     "fast-glob": "^3.2.4",
     "fastify": "^2.15.2",
+    "ilc-plugins-sdk": "^1.3.2",
     "ilc-sdk": "^2.1.0",
     "is-url": "^1.2.4",
     "js-cookie": "^2.2.1",
