--- a/registry/client/package.json
+++ b/registry/client/package.json
@@ -6,8 +6,8 @@
     "main": "index.html",
     "scripts": {
         "start": "webpack-dev-server --progress --color --hot --watch --mode development",
-        "build": "webpack-cli --color --hide-modules true",
-        "build:watch": "npm run build --- --watch --mode development"
+        "build": "NODE_ENV=production webpack-cli --mode production --color --hide-modules true",
+        "build:watch": "NODE_ENV=developemnt webpack-cli --color --hide-modules true --watch --mode development"
     },
     "devDependencies": {
         "@babel/cli": "^7.12.10",
