--- a/ilc/package.json
+++ b/ilc/package.json
@@ -28,6 +28,7 @@
     "config": "^3.3.1",
     "cookie": "^0.4.1",
     "cross-env": "^6.0.3",
+    "debug": "^4.3.1",
     "deepmerge": "4.2.2",
     "fast-glob": "^3.2.4",
     "fastify": "^2.15.2",
