--- a/ilc/package.json
+++ b/ilc/package.json
@@ -28,11 +28,12 @@
     "config": "^3.3.1",
     "cookie": "^0.4.1",
     "cross-env": "^6.0.3",
+    "debug": "^4.3.1",
     "deepmerge": "4.2.2",
     "fast-glob": "^3.2.4",
     "fastify": "^2.15.2",
     "ilc-plugins-sdk": "^1.3.2",
-    "ilc-sdk": "^2.1.0",
+    "ilc-sdk": "^2.4.1",
     "is-url": "^1.2.4",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.19",
