--- a/ilc/package.json
+++ b/ilc/package.json
@@ -37,6 +37,7 @@
     "is-url": "^1.2.4",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.19",
+    "lzutf8": "^0.6.0",
     "newrelic": "^6.11.0",
     "serve-static": "^1.14.1",
     "single-spa": "5.6.0",
