--- a/registry/package.json
+++ b/registry/package.json
@@ -30,6 +30,7 @@
         "@types/express": "4.17.9",
         "@types/express-serve-static-core": "4.17.17",
         "@types/express-session": "^1.17.0",
+        "@types/is-valid-domain": "0.0.0",
         "@types/joi": "^14.3.4",
         "@types/lodash": "^4.14.155",
         "@types/mocha": "^7.0.1",
@@ -64,6 +65,7 @@
         "express": "^4.17.1",
         "express-session": "^1.17.1",
         "http-shutdown": "^1.2.1",
+        "is-valid-domain": "0.0.19",
         "joi": "^17.2.1",
         "knex": "^0.21.1",
         "lodash": "^4.17.19",
