--- a/registry/package.json
+++ b/registry/package.json
@@ -74,6 +74,7 @@
         "passport": "^0.4.1",
         "passport-http-bearer": "^1.0.1",
         "passport-local": "^1.0.0",
+        "query-string": "^7.0.0",
         "serve-static": "^1.14.1",
         "source-map-support": "^0.5.19",
         "sqlite3": "^5.0.0",
