--- a/registry/package.json
+++ b/registry/package.json
@@ -13,6 +13,7 @@
         "knex": "knex",
         "migrate": "knex --knexfile config/knexfile.ts migrate:latest",
         "migrate:make": "knex --knexfile config/knexfile.ts migrate:make",
+        "migrate:rollback": "knex --knexfile config/knexfile.ts migrate:rollback",
         "seed": "knex --knexfile config/knexfile.ts seed:run",
         "seed:make": "knex --knexfile config/knexfile.ts seed:make -x ts",
         "test": "cross-env NODE_ENV=test mocha --exclude=client/node_modules/**",
