--- a/ilc/package.json
+++ b/ilc/package.json
@@ -34,6 +34,7 @@
     "fastify": "^2.15.2",
     "ilc-plugins-sdk": "^1.3.2",
     "ilc-sdk": "^2.4.1",
+    "is-relative-url": "3.0.0",
     "is-url": "^1.2.4",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.19",
