--- a/ilc/package.json
+++ b/ilc/package.json
@@ -41,7 +41,7 @@
     "newrelic": "^6.11.0",
     "serve-static": "^1.14.1",
     "single-spa": "5.6.0",
-    "systemjs": "^6.4.2",
+    "systemjs": "6.10.1",
     "systemjs-css-extra": "^1.0.2",
     "tailorx": "^7.0.0",
     "url-join": "^4.0.1",
