--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,12 +21,14 @@ nav:
   - Installation: installation_guide.md
   - Micro-frontend Types: microfrontend-types.md
   - App deployments with ILC: stepbystep/index.md
+  - ILC to App interface: ilc_app_interface.md
   - ILC Registry: registry.md
   - Animation during reroute: animation_during_reroute.md
   - Global error handling: global_errors_handling.md
   - Internationalization: i18n.md
   - Develop at Production: develop_at_production.md
   - Compatibility with legacy UMD bundles: umd_bundles_compatibility.md
+  - Global API: global_api.md
   - ILC transition hooks: transition_hooks.md
   - Multi-domains: multi-domains.md
   - Advanced features:
@@ -40,9 +42,7 @@ nav:
         - Lesson 3: stepbystep/react/lesson3.md
         - Lesson 4: stepbystep/react/lesson4.md
   - External resources:
-    - ILC to App interface: https://namecheap.github.io/ilc-sdk/pages/Pages/ilc_app_interface.html
     - Demo applications used in quick start: https://github.com/namecheap/ilc-demo-apps
-    - Global API: https://namecheap.github.io/ilc-sdk/pages/Pages/global_api.html
     - SDK for ILC plugins development: https://github.com/namecheap/ilc-plugins-sdk
     - Public Path Problem: https://namecheap.github.io/ilc-sdk/pages/Pages/public_path.html
 
@@ -50,6 +50,10 @@ markdown_extensions:
   - attr_list
   - toc:
       permalink: ⚓︎
+  - pymdownx.emoji:
+      emoji_index: !!python/name:materialx.emoji.twemoji
+      emoji_generator: !!python/name:materialx.emoji.to_svg
+
 
 docs_dir: 'docs'
 site_dir: 'output'
